
# add_executable(test4
# ${CMAKE_CURRENT_LIST_DIR}/src/test_4.cpp
# )

# target_link_libraries(test4
# ${GTEST_BOTH_LIBRARIES}
# ${CMAKE_THREAD_LIBS_INIT}
# 4
# )

# add_executable(test5
# ${CMAKE_CURRENT_LIST_DIR}/src/test_5.cpp
# )

# target_link_libraries(test5
# ${GTEST_BOTH_LIBRARIES}
# ${CMAKE_THREAD_LIBS_INIT}
# 5
# )

# add_executable(test6
# ${CMAKE_CURRENT_LIST_DIR}/src/test_6.cpp
# )

# target_link_libraries(test6
# ${GTEST_BOTH_LIBRARIES}
# ${CMAKE_THREAD_LIBS_INIT}
# 6
# )

# add_executable(test7
# ${CMAKE_CURRENT_LIST_DIR}/src/test_7.cpp
# )

# target_link_libraries(test7
# ${GTEST_BOTH_LIBRARIES}
# ${CMAKE_THREAD_LIBS_INIT}
# 7
# )

# add_executable(test8
# ${CMAKE_CURRENT_LIST_DIR}/src/test_8.cpp
# )

# target_link_libraries(test8
# ${GTEST_BOTH_LIBRARIES}
# ${CMAKE_THREAD_LIBS_INIT}
# 8
# )

# add_executable(test9
# ${CMAKE_CURRENT_LIST_DIR}/src/test_9.cpp
# )

# target_link_libraries(test9
# ${GTEST_BOTH_LIBRARIES}
# ${CMAKE_THREAD_LIBS_INIT}
# )

# add_executable(test10
# ${CMAKE_CURRENT_LIST_DIR}/src/test_10.cpp
# )

# target_link_libraries(test10
# ${GTEST_BOTH_LIBRARIES}
# ${CMAKE_THREAD_LIBS_INIT}
# )

# add_executable(test11
# ${CMAKE_CURRENT_LIST_DIR}/src/test_11.cpp
# )

# target_link_libraries(test11
# ${GTEST_BOTH_LIBRARIES}
# ${CMAKE_THREAD_LIBS_INIT}
# )

# add_executable(test12
# ${CMAKE_CURRENT_LIST_DIR}/src/test_12.cpp
# )

# target_link_libraries(test12
# ${GTEST_BOTH_LIBRARIES}
# ${CMAKE_THREAD_LIBS_INIT}
# )

# add_executable(test13
# ${CMAKE_CURRENT_LIST_DIR}/src/test_13.cpp
# )

# target_link_libraries(test13
# ${GTEST_BOTH_LIBRARIES}
# ${CMAKE_THREAD_LIBS_INIT}
# )

# add_executable(test14
# ${CMAKE_CURRENT_LIST_DIR}/src/test_14.cpp
# )

# target_link_libraries(test14
# ${GTEST_BOTH_LIBRARIES}
# ${CMAKE_THREAD_LIBS_INIT}
# )

# add_executable(test15
# ${CMAKE_CURRENT_LIST_DIR}/src/test_15.cpp
# )

# target_link_libraries(test15
# ${GTEST_BOTH_LIBRARIES}
# ${CMAKE_THREAD_LIBS_INIT}
# )

# add_executable(test16
# ${CMAKE_CURRENT_LIST_DIR}/src/test_16.cpp
# )

# target_link_libraries(test16
# ${GTEST_BOTH_LIBRARIES}
# ${CMAKE_THREAD_LIBS_INIT}
# )

# add_executable(test17
# ${CMAKE_CURRENT_LIST_DIR}/src/test_17.cpp
# )

# target_link_libraries(test17
# ${GTEST_BOTH_LIBRARIES}
# ${CMAKE_THREAD_LIBS_INIT}
# )

add_executable(test18
${CMAKE_CURRENT_LIST_DIR}/src/test_18.cpp
)

target_link_libraries(test18
${GTEST_BOTH_LIBRARIES}
${CMAKE_THREAD_LIBS_INIT}
)

# add_test(test4
# ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR}/test4
# )
# add_test(test5
# ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR}/test5
# )
# add_test(test6
# ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR}/test6
# )
# add_test(test7
# ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR}/test7
# )
# add_test(test8
# ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR}/test8
# )
# add_test(test9
# ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR}/test9
# )
# add_test(test10
# ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR}/test10
# )
# add_test(test11
# ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR}/test11
# )
# add_test(test12
# ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR}/test12
# )
# add_test(test13
# ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR}/test13
# )
# add_test(test14
# ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR}/test14
# )
# add_test(test15
# ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR}/test15
# )
# add_test(test16
# ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR}/test16
# )
# add_test(test17
# ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR}/test17
# )
add_test(test18
${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR}/test18
)