
# add_executable(test4
# ${CMAKE_CURRENT_LIST_DIR}/src/test_4.cpp
# )

# target_link_libraries(test4
# ${GTEST_BOTH_LIBRARIES}
# ${CMAKE_THREAD_LIBS_INIT}
# 4
# )

# add_executable(test5
# ${CMAKE_CURRENT_LIST_DIR}/src/test_5.cpp
# )

# target_link_libraries(test5
# ${GTEST_BOTH_LIBRARIES}
# ${CMAKE_THREAD_LIBS_INIT}
# 5
# )

add_executable(test6
${CMAKE_CURRENT_LIST_DIR}/src/test_6.cpp
)

target_link_libraries(test6
${GTEST_BOTH_LIBRARIES}
${CMAKE_THREAD_LIBS_INIT}
)

# add_executable(test7
# ${CMAKE_CURRENT_LIST_DIR}/src/test_7.cpp
# )

# target_link_libraries(test7
# ${GTEST_BOTH_LIBRARIES}
# ${CMAKE_THREAD_LIBS_INIT}
# 7
# )

# add_executable(test8
# ${CMAKE_CURRENT_LIST_DIR}/src/test_8.cpp
# )

# target_link_libraries(test8
# ${GTEST_BOTH_LIBRARIES}
# ${CMAKE_THREAD_LIBS_INIT}
# 8
# )

# add_executable(test9
# ${CMAKE_CURRENT_LIST_DIR}/src/test_9.cpp
# )

# target_link_libraries(test9
# ${GTEST_BOTH_LIBRARIES}
# ${CMAKE_THREAD_LIBS_INIT}
# )

# add_executable(test10
# ${CMAKE_CURRENT_LIST_DIR}/src/test_10.cpp
# )

# target_link_libraries(test10
# ${GTEST_BOTH_LIBRARIES}
# ${CMAKE_THREAD_LIBS_INIT}
# )

# add_executable(test11
# ${CMAKE_CURRENT_LIST_DIR}/src/test_11.cpp
# )

# target_link_libraries(test11
# ${GTEST_BOTH_LIBRARIES}
# ${CMAKE_THREAD_LIBS_INIT}
# )

# add_executable(test12
# ${CMAKE_CURRENT_LIST_DIR}/src/test_12.cpp
# )

# target_link_libraries(test12
# ${GTEST_BOTH_LIBRARIES}
# ${CMAKE_THREAD_LIBS_INIT}
# )

# add_executable(test13
# ${CMAKE_CURRENT_LIST_DIR}/src/test_13.cpp
# )

# target_link_libraries(test13
# ${GTEST_BOTH_LIBRARIES}
# ${CMAKE_THREAD_LIBS_INIT}
# )

# add_executable(test14
# ${CMAKE_CURRENT_LIST_DIR}/src/test_14.cpp
# )

# target_link_libraries(test14
# ${GTEST_BOTH_LIBRARIES}
# ${CMAKE_THREAD_LIBS_INIT}
# )

# add_executable(test15
# ${CMAKE_CURRENT_LIST_DIR}/src/test_15.cpp
# )

# target_link_libraries(test15
# ${GTEST_BOTH_LIBRARIES}
# ${CMAKE_THREAD_LIBS_INIT}
# )

# add_executable(test16
# ${CMAKE_CURRENT_LIST_DIR}/src/test_16.cpp
# )

# target_link_libraries(test16
# ${GTEST_BOTH_LIBRARIES}
# ${CMAKE_THREAD_LIBS_INIT}
# )

# add_executable(test17
# ${CMAKE_CURRENT_LIST_DIR}/src/test_17.cpp
# )

# target_link_libraries(test17
# ${GTEST_BOTH_LIBRARIES}
# ${CMAKE_THREAD_LIBS_INIT}
# )

add_executable(test18
${CMAKE_CURRENT_LIST_DIR}/src/test_18.cpp
)

target_link_libraries(test18
${GTEST_BOTH_LIBRARIES}
${CMAKE_THREAD_LIBS_INIT}
)

add_executable(test19
${CMAKE_CURRENT_LIST_DIR}/src/test_19.cpp
)

target_link_libraries(test19
${GTEST_BOTH_LIBRARIES}
${CMAKE_THREAD_LIBS_INIT}
)

add_executable(test20
${CMAKE_CURRENT_LIST_DIR}/src/test_20.cpp
)

target_link_libraries(test20
${GTEST_BOTH_LIBRARIES}
${CMAKE_THREAD_LIBS_INIT}
)

add_executable(test21
${CMAKE_CURRENT_LIST_DIR}/src/test_21.cpp
)

target_link_libraries(test21
${GTEST_BOTH_LIBRARIES}
${CMAKE_THREAD_LIBS_INIT}
)

add_executable(test22
${CMAKE_CURRENT_LIST_DIR}/src/test_22.cpp
)

target_link_libraries(test22
${GTEST_BOTH_LIBRARIES}
${CMAKE_THREAD_LIBS_INIT}
)

add_executable(test23
${CMAKE_CURRENT_LIST_DIR}/src/test_23.cpp
)

target_link_libraries(test23
${GTEST_BOTH_LIBRARIES}
${CMAKE_THREAD_LIBS_INIT}
)

add_executable(test24
${CMAKE_CURRENT_LIST_DIR}/src/test_24.cpp
)

target_link_libraries(test24
${GTEST_BOTH_LIBRARIES}
${CMAKE_THREAD_LIBS_INIT}
)

add_executable(test25
${CMAKE_CURRENT_LIST_DIR}/src/test_25.cpp
)

target_link_libraries(test25
${GTEST_BOTH_LIBRARIES}
${CMAKE_THREAD_LIBS_INIT}
)

add_executable(test26
${CMAKE_CURRENT_LIST_DIR}/src/test_26.cpp
)

target_link_libraries(test26
${GTEST_BOTH_LIBRARIES}
${CMAKE_THREAD_LIBS_INIT}
)

add_executable(test27
${CMAKE_CURRENT_LIST_DIR}/src/test_27.cpp
)

target_link_libraries(test27
${GTEST_BOTH_LIBRARIES}
${CMAKE_THREAD_LIBS_INIT}
)

add_executable(test28
${CMAKE_CURRENT_LIST_DIR}/src/test_28.cpp
)

target_link_libraries(test28
${GTEST_BOTH_LIBRARIES}
${CMAKE_THREAD_LIBS_INIT}
)

add_executable(test29
${CMAKE_CURRENT_LIST_DIR}/src/test_29.cpp
)

target_link_libraries(test29
${GTEST_BOTH_LIBRARIES}
${CMAKE_THREAD_LIBS_INIT}
)

add_executable(test30
${CMAKE_CURRENT_LIST_DIR}/src/test_30.cpp
)

target_link_libraries(test30
${GTEST_BOTH_LIBRARIES}
${CMAKE_THREAD_LIBS_INIT}
)

add_executable(test31
${CMAKE_CURRENT_LIST_DIR}/src/test_31.cpp
)

target_link_libraries(test31
${GTEST_BOTH_LIBRARIES}
${CMAKE_THREAD_LIBS_INIT}
)

add_executable(test32
${CMAKE_CURRENT_LIST_DIR}/src/test_32.cpp
)

target_link_libraries(test32
${GTEST_BOTH_LIBRARIES}
${CMAKE_THREAD_LIBS_INIT}
)

# add_test(test4
# ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR}/test4
# )
# add_test(test5
# ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR}/test5
# )
add_test(test6
${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR}/test6
)
# add_test(test7
# ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR}/test7
# )
# add_test(test8
# ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR}/test8
# )
# add_test(test9
# ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR}/test9
# )
# add_test(test10
# ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR}/test10
# )
# add_test(test11
# ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR}/test11
# )
# add_test(test12
# ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR}/test12
# )
# add_test(test13
# ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR}/test13
# )
# add_test(test14
# ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR}/test14
# )
# add_test(test15
# ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR}/test15
# )
# add_test(test16
# ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR}/test16
# )
# add_test(test17
# ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR}/test17
# )
add_test(test18
${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR}/test18
)
add_test(test19
${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR}/test19
)
add_test(test20
${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR}/test20
)
add_test(test21
${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR}/test21
)
add_test(test22
${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR}/test22
)
add_test(test23
${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR}/test23
)
add_test(test24
${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR}/test24
)
add_test(test25
${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR}/test25
)
add_test(test26
${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR}/test26
)
add_test(test27
${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR}/test27
)
add_test(test28
${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR}/test28
)
add_test(test29
${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR}/test29
)
add_test(test30
${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR}/test30
)
add_test(test31
${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR}/test31
)
add_test(test32
${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR}/test32
)